--- a/todo/angular.json
+++ b/todo/angular.json
@@ -24,9 +24,18 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+                  "src/styles.css"
             ],
             "scripts": []
+            // "styles": [
+            //   "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+            //   "src/styles.css"
+            // ],
+            // "scripts": [
+            //   // "./node_modules/jquery/dist/jquery.js",
+            //   // ".node_modules/tether/dist/js/tether/js",
+            //   "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            // ]
           },
           "configurations": {
             "production": {
